--- a/css/styles.css
+++ b/css/styles.css
@@ -79,21 +79,18 @@ body {
     background-color: #27ae60;
 }
 /* end nav-bar */
-/* Conteneur principal */
+
+/*
 .main-container {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 1rem;
     gap: 2rem;
+    padding: 1rem;
 }
-
-/* Terrain */
 .terrain-container {
-    flex: 1;
+    flex: 2;
     position: relative;
     max-width: 600px;
-    aspect-ratio: 3 / 4; /* Maintient les proportions du terrain */
+    aspect-ratio: 3 / 4;
 }
 
 .terrain {
@@ -105,8 +102,6 @@ body {
     border-radius: 10px;
     position: relative;
 }
-
-/* Positions des joueurs */
 .player-position {
     position: absolute;
     width: 40px;
@@ -121,12 +116,52 @@ body {
     font-weight: bold;
     transform: translate(-50%, -50%);
     cursor: pointer;
-    transition: transform 0.3s ease, background-color 0.3s ease;
+}
+.form-container {
+    flex: 1;
+    background-color: #ffffff;
+    padding: 1rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.player-position:hover {
-    transform: translate(-50%, -50%) scale(1.1);
-    background-color: rgba(41, 128, 185, 1);
+.form-container h2 {
+    margin-top: 0;
 }
 
+form label {
+    display: block;
+    margin-top: 0.5rem;
+    font-weight: bold;
+}
+
+form input, form select, form button {
+    width: 100%;
+    margin-top: 0.5rem;
+    padding: 0.5rem;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+form button {
+    background-color: #3498db;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+}
+
+form button:hover {
+    background-color: #2980b9;
+}
+*/
+.background-photo {
+    height: 100vh; 
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+    url('../img/Bgimg.jpg') no-repeat center center/cover; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
 
