--- a/css/styles.css
+++ b/css/styles.css
@@ -80,88 +80,74 @@ body {
 }
 /* end nav-bar */
 
-/*
+
 .main-container {
     display: flex;
-    gap: 2rem;
-    padding: 1rem;
-}
-.terrain-container {
-    flex: 2;
-    position: relative;
-    max-width: 600px;
-    aspect-ratio: 3 / 4;
-}
-
-.terrain {
-    width: 100%;
-    height: 100%;
-    background-image: url('https://www.futbin.com/design2/img/static/field-bg.svg');
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-    position: relative;
-}
-.player-position {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background-color: rgba(52, 152, 219, 0.8);
-    color: white;
-    border-radius: 50%;
-    display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: 1rem;
-    font-weight: bold;
-    transform: translate(-50%, -50%);
-    cursor: pointer;
-}
-.form-container {
-    flex: 1;
-    background-color: #ffffff;
-    padding: 1rem;
-    border-radius: 10px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 2rem;
 }
 
-.form-container h2 {
-    margin-top: 0;
-}
-
-form label {
-    display: block;
-    margin-top: 0.5rem;
-    font-weight: bold;
-}
-
-form input, form select, form button {
+.content-container {
+    display: flex;
     width: 100%;
-    margin-top: 0.5rem;
-    padding: 0.5rem;
-    border: 1px solid #ccc;
+    max-width: 1200px;
+}
+
+.terrain-container {
+    flex: 60%;
+    padding-right: 2rem;
+}
+
+.terrain-image {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.form-container {
+    flex: 30%;
+    background-color: white;
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form-container label {
+    margin: 0.5rem 0 0.2rem;
+}
+
+.form-container input, .form-container select {
+    padding: 0.8rem;
+    margin-bottom: 1rem;
     border-radius: 5px;
+    border: 1px solid #ccc;
 }
 
 form button {
     background-color: #3498db;
     color: white;
-    font-size: 1rem;
+    padding: 1rem;
+    border: none;
+    border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 form button:hover {
     background-color: #2980b9;
 }
-*/
-.background-photo {
-    height: 100vh; 
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-    url('../img/Bgimg.jpg') no-repeat center center/cover; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
+/*------------------------------------------------------------------------*/
+
+
+
+
+
+
+
 
