--- a/css/styles.css
+++ b/css/styles.css
@@ -253,70 +253,70 @@ form button:hover {
     flex-direction: column;
     gap: 40px;
     padding: 20px;
-  }
-  
-  .category-container {
+}
+
+.category-container {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #f9f9f9;
-  }
-  
-  .category-title {
+}
+
+.category-title {
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 20px;
     text-align: center;
-  }
-  
-  .player-grid {
+}
+
+.player-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 20px;
-  }
-  
-  .player-badge-gold {
+}
+
+.player-badge-gold {
     position: relative;
     text-align: center;
-  }
-  
-  .badge {
+}
+
+.badge {
     position: relative;
     width: 150px;
     height: 200px;
-  }
-  
-  .badge-bg {
+}
+
+.badge-bg {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
-  }
-  
-  .player-info {
+}
+
+.player-info {
     position: relative;
     z-index: 1;
-  }
-  
-  .player-photo {
+}
+
+.player-photo {
     width: 70px;
     height: 70px;
     border-radius: 50%;
     margin-bottom: 10px;
-  }
-  
-  .player-name {
+}
+
+.player-name {
     font-size: 1rem;
     font-weight: bold;
-  }
-  
-  .player-position {
+}
+
+.player-position {
     font-size: 0.9rem;
     color: gray;
-  }
-  
+}
+
 .club-logo {
     width: 20px;
     height: 20px;
@@ -342,6 +342,118 @@ form button:hover {
 .add-player-btn:hover {
     background-color: #45a049; 
 }
+
+
+/*----------------------------------------------------*/
+ /* Style du modal */
+
+.modal {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    overflow: auto;
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 50%; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
+h3 {
+    margin-bottom: 15px;
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5rem;
+    cursor: pointer;
+    color: #d21b1b;
+}
+
+
+.form-group {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px; 
+    margin-bottom: 15px;
+}
+
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="url"],
+input[type="number"],
+select {
+    flex: 1; 
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type="text"]:focus,
+input[type="url"]:focus,
+input[type="number"]:focus,
+select:focus {
+    border-color: #007BFF;
+    outline: none;
+}
+
+
+button[type="submit"] {
+    width: 150px; 
+    padding: 8px 16px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.9rem;
+    margin-top: 10px;
+    text-align: center;
+}
+
+button[type="submit"]:hover {
+    background-color: #0056b3;
+}
+
+
+/* Responsive */
+@media (max-width: 768px) {
+    .modal-content {
+        width: 90%;
+    }
+
+    .form-group {
+        flex-direction: column; 
+    }
+
+    input[type="text"],
+    input[type="url"],
+    input[type="number"],
+    select {
+        width: 100%; 
+    }
+}
+
 
 
 
